fix: vh, vw to % due to wrong sizes on responsive

--- a/style.css
+++ b/style.css
@@ -833,8 +833,8 @@ body {
   justify-content: center;
   align-items: center;
 
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 
   background-color: rgba(0, 0, 0, 0.4);
 }
